deployments/overlays/prd/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${JOB_NAME}
  namespace: intranet
  annotations:
    kubernetes.io/change-cause: "Deploy automático via Jenkins - build ${BUILD_NUMBER}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${JOB_NAME}
  template:
    metadata:
      labels:
        app: ${JOB_NAME}
    spec:
      imagePullSecrets:
        - name: repository-service
      tolerations:
        - key: "environment"
          operator: "Equal"
          value: "prd"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "kubernetes.io/hostname"
                    operator: In
                    values:
                      - work4-prd
      containers:
        - name: ${JOB_NAME}
          image: repository-service.loglabprojetos.com.br/docker-service/${JOB_NAME}:v.${BUILD_NUMBER}.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "3Gi"
              cpu: "2"
              
          volumeMounts:
          
            - name: nextcloud-data
              mountPath: /var/www/html/data

            - name: nextcloud-config
              mountPath: /var/www/html/config
      volumes:

        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data

        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
